homeworks/horodynskyiov/module-03/lesson-08/course-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app.127.0.0.1.sslip.io
      secretName: course-app-tls
  rules:
    - host: course-app.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app
                port:
                  number: 8080
